--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
         android:theme="@style/Theme.ProjetoOficial">
         <activity
             android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".FrmLogin"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
